Update ITs to ignore new Java 11 warning log from SonarQube